[type]:   fix [module]: css [id]:     refs #93 [desc]:  Added a fix that makes buttons align to the right correctly in IE.
git-svn-id: http://code.extjs.com/svn/ext/trunk@5097 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/panel.css
+++ b/resources/css/structure/panel.css
@@ -413,7 +413,7 @@
     width:auto;
 }
 
-.ext-gecko2 .x-panel-btns-right .x-toolbar-ct {
+.ext-ie .x-panel-btns-right .x-toolbar-ct, .ext-gecko2 .x-panel-btns-right .x-toolbar-ct {
     width:auto;
 }
 
